--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-uuid": "^2.0.0",
+    "typeit-react": "^2.6.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
